--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predev": "node scripts/check-deps.cjs",
+    "prebuild": "node scripts/check-deps.cjs",
+    "prelint": "node scripts/check-deps.cjs",
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
