--- a/server/cloudbuild.yaml.example
+++ b/server/cloudbuild.yaml.example
@@ -1,11 +1,11 @@
 steps:
   # Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/fortress-modeler-api:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/fortress-modeler-backend:$COMMIT_SHA', '.']
 
   # Push the Docker image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/fortress-modeler-api:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/fortress-modeler-backend:$COMMIT_SHA']
 
   # Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -13,9 +13,9 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'fortress-modeler-api'
+      - 'fortress-modeler-backend'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/fortress-modeler-api:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/fortress-modeler-backend:$COMMIT_SHA'
       - '--region'
       - 'australia-southeast2'
       - '--platform'
@@ -40,7 +40,7 @@ steps:
       - 'NODE_ENV=production,GOOGLE_CLIENT_ID=your-client-id,GOOGLE_CLIENT_SECRET=your-secret,JWT_SECRET=your-jwt-secret,DB_HOST=/cloudsql/your-connection-string,DB_USER=your-user,DB_PASSWORD=your-password,DB_NAME=your-db,CLIENT_URL=your-frontend-url'
 
 images:
-  - 'gcr.io/$PROJECT_ID/fortress-modeler-api:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/fortress-modeler-backend:$COMMIT_SHA'
 
 options:
   logging: CLOUD_LOGGING_ONLY
