security: Remove exposed credentials and implement secure configuration
- Remove .env.production and netlify.toml with exposed Supabase credentials
- Update .gitignore to prevent future credential commits
- Add netlify.toml.example as template without credentials
- Add SECURITY_REMEDIATION_PLAN.md with security guidelines
- Credentials already rotated in Supabase dashboard and Netlify UI

🔒 Security remediation for exposed API keys in repository

--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,16 @@ dist-ssr
 # Environment files - NEVER commit these
 .env
 .env.*
+.env.production
+.env.staging
+.env.local
 server/.env
 server/.env.*
 server/.env.production
 server/.env.bak
+
+# Files with embedded credentials
+netlify.toml
 
 # Deployment files containing secrets
 # server/cloudbuild.yaml
