fix: align all configurations to use correct Supabase project
- Removed all backup directories and files
- Standardized on Netlify deployment
- Fixed Supabase project mismatch (now using issmshemlkrucmxcvibs)
- Added Google OAuth configuration
- Created proper environment configuration
- Added OAuth diagnostic scripts
- Cleaned up project structure

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,15 @@
-# Fortress Financial Modeler - Environment Configuration Template
-# Copy this file to .env and fill in your actual values
+# Fortress Financial Modeler - Environment Variables Template
+# Copy this file to .env and fill in your values
 
-# AI API Keys (Optional - for development tools)
-GEMINI_API_KEY=your-gemini-api-key-here
-OPENAI_API_KEY=your-openai-api-key-here
-CODEGPT_API_KEY=your-codegpt-api-key-here
+# Supabase Configuration (Required)
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
-# Supabase Configuration (Required for cloud mode)
-VITE_SUPABASE_URL=https://your-project-id.supabase.co
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key-here
-
-# Backend Mode (CRITICAL - set to true for cloud projects)
+# Backend Mode (Required)
 VITE_USE_SUPABASE_BACKEND=true
 
-# OAuth Configuration (Required for authentication)
-VITE_GOOGLE_CLIENT_ID=your-google-client-id.googleusercontent.com
+# OAuth Configuration (Required for Google login)
+VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 
 # Debug Mode (Optional)
 VITE_DEBUG=false
