--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,26 @@ temp-files/
 
 # RTF files (can cause terminal display issues)
 *.rtf
+
+# Temporary and debug files
+.tmp/
+.db-password
+*.backup
+
+# Test scripts
+test-*.js
+test-*.sh
+
+# Local scripts with secrets
+scripts/oauth/
+scripts/local/
+
+# Environment files
+.env.local
+.env.production
+
+# IDE files
+.idea/
+*.swp
+*.swo
+
